# cmake_opencl_sample

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  research.yml
include/: fma_opencl.hpp
src/: main.cpp
test/: CMakeLists.txt  fma.cpp
